# nimble

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: api.rs  config.rs  db.rs  main.rs  state.rs  types.rs
crates/agent/src/workers/: build.rs  deploy.rs  mod.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs  types.rs
crates/cmd/src/commands/: build_get.rs  build_list.rs  deploy.rs  deployment_get.rs  deployment_list.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/builders/: docker.rs  go.rs  mod.rs
crates/test/: Cargo.toml  README.md
crates/test/src/: lib.rs
crates/test/tests/: e2e.rs
doc/: agent-disk-storage.md  api.md  cli.md  worker.md
examples/go-hello/: Dockerfile  main.go  nimble.yaml
src/: main.rs  types.rs
src/builders/: mod.rs
