[package]
name = "nimble-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.7", features = ["macros"] }
flate2 = "1.1.5"
nimble-core = { path = "../core" }
serde = { version = "1.0.228", features = ["serde_derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v4"] }
