[package]
name = "nimble"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
flate2 = "1.0"
tar = "0.4"
